Add jdk 11, 17, 21 to the build workflow (#17)